--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
    <body>
      
      <h1></h1>
+     <img src="https://avatars.githubusercontent.com/u/97243931?v=4">
+
 Hello there, awesome person!
     
   </body>
