added lists of memory devices
added lists of memory devices of a computer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   </head>
   
    <body>
+     <ol>
+       <li>registers</li>
+       <li>cache</li>
+       <li>ram</li>
+     </ol>
      
      <h1></h1>
      <img src="https://avatars.githubusercontent.com/u/97243931?v=4">
