--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
        <li>registers</li>
        <li>cache</li>
        <li>ram</li>
+       <li><a href="https://github.com">This is a link to GitHub!</a></li>
      </ol>
      
      <h1></h1>
